data/forge_javadoc/1.12.2/processed/net_minecraftforge_fluids_Fluid.md
# Fluid

**Inheritance:** java.lang.Object → net.minecraftforge.fluids.Fluid

## Class signature

```java
public class Fluid extends java.lang.Object
```

## Constructors

- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing)`
- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing, java.awt.Color color)`
- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing, int color)`
- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing, ResourceLocation overlay)`
- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing, ResourceLocation overlay, java.awt.Color color)`
- `Fluid(java.lang.String fluidName, ResourceLocation still, ResourceLocation flowing, ResourceLocation overlay, int color)`

## Methods

- `boolean canBePlacedInWorld()`
- `boolean doesVaporize(FluidStack fluidStack)` — Determines if this fluid should vaporize in dimensions where water vaporizes when placed.
- `Block getBlock()`
- `int getColor()`
- `int getColor(FluidStack stack)`
- `int getColor(World world, BlockPos pos)`
- `int getDensity()`
- `int getDensity(FluidStack stack)`
- `int getDensity(World world, BlockPos pos)`
- `SoundEvent getEmptySound()`
- `SoundEvent getEmptySound(FluidStack stack)`
- `SoundEvent getEmptySound(World world, BlockPos pos)`
- `SoundEvent getFillSound()`
- `SoundEvent getFillSound(FluidStack stack)`
- `SoundEvent getFillSound(World world, BlockPos pos)`
- `ResourceLocation getFlowing()`
- `ResourceLocation getFlowing(FluidStack stack)`
- `ResourceLocation getFlowing(World world, BlockPos pos)`
- `java.lang.String getLocalizedName(FluidStack stack)` — Returns the localized name of this fluid.
- `int getLuminosity()`
- `int getLuminosity(FluidStack stack)`
- `int getLuminosity(World world, BlockPos pos)`
- `java.lang.String getName()`
- `ResourceLocation getOverlay()`
- `EnumRarity getRarity()`
- `EnumRarity getRarity(FluidStack stack)`
- `EnumRarity getRarity(World world, BlockPos pos)`
- `ResourceLocation getStill()`
- `ResourceLocation getStill(FluidStack stack)`
- `ResourceLocation getStill(World world, BlockPos pos)`
- `int getTemperature()`
- `int getTemperature(FluidStack stack)`
- `int getTemperature(World world, BlockPos pos)`
- `java.lang.String getUnlocalizedName()` — Returns the unlocalized name of this fluid.
- `java.lang.String getUnlocalizedName(FluidStack stack)` — A FluidStack sensitive version of getUnlocalizedName
- `int getViscosity()`
- `int getViscosity(FluidStack stack)`
- `int getViscosity(World world, BlockPos pos)`
- `boolean isGaseous()`
- `boolean isGaseous(FluidStack stack)`
- `boolean isGaseous(World world, BlockPos pos)`
- `boolean isLighterThanAir()`
- `Fluid setBlock(Block block)`
- `Fluid setColor(java.awt.Color color)`
- `Fluid setColor(int color)`
- `Fluid setDensity(int density)`
- `Fluid setEmptySound(SoundEvent emptySound)`
- `Fluid setFillSound(SoundEvent fillSound)`
- `Fluid setGaseous(boolean isGaseous)`
- `Fluid setLuminosity(int luminosity)`
- `Fluid setRarity(EnumRarity rarity)`
- `Fluid setTemperature(int temperature)`
- `Fluid setUnlocalizedName(java.lang.String unlocalizedName)`
- `Fluid setViscosity(int viscosity)`
- `void vaporize(EntityPlayer player, World worldIn, BlockPos pos, FluidStack fluidStack)` — Called instead of placing the fluid block if WorldProvider.doesWaterVaporize() and doesVaporize(FluidStack) are true.

## Fields

- `protected Block block` — If there is a Block implementation of the Fluid, the Block is linked here.
- `static int BUCKET_VOLUME`
- `protected int color` — Color used by universal bucket and the ModelFluid baked model.
- `protected int density` — Density of the fluid - completely arbitrary; negative density indicates that the fluid is lighter than air.
- `protected ResourceLocation flowing`
- `protected java.lang.String fluidName` — The unique identification name for this fluid.
- `protected boolean isGaseous` — This indicates if the fluid is gaseous.
- `protected int luminosity` — The light level emitted by this fluid.
- `protected ResourceLocation overlay`
- `protected EnumRarity rarity` — The rarity of the fluid.
- `protected ResourceLocation still`
- `protected int temperature` — Temperature of the fluid - completely arbitrary; higher temperature indicates that the fluid is hotter than air.
- `protected java.lang.String unlocalizedName` — The unlocalized name of this fluid.
- `protected int viscosity` — Viscosity ("thickness") of the fluid - completely arbitrary; negative values are not permissible.